[package]
name = "collect_regional_kinetics"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0.133", features = ["derive"] }
clap = { version = "3.0.6", features = ["derive"] }
rayon = "1.5.1"
